tests/paczka1/fuzzy1/75298416.err
Error in line 4: ixR2p9dc0 S941 3,5
Error in line 1: mVyU S855 47,7
Error in line 13: mVyU S277 64,4
Error in line 29: lrwnKC2QDYi S855 -2,0
Error in line 33: ixR2p9dc0 S855 99,6
